grammar.js
    source_file: ($) => repeat($.expression_statement),

    // Items that only make sence on their own, not inside other expression.
    expression: ($) =>
      choice(
        $.atomic,
        $.message_name,
        $.assignment,
        $.tag_assigment,
        $.augmented_assignment,
        $.binary_operation,
        $.comparison_operation,
        $.unary_operation,
        $.implicit_times,
        $.call,
        $.subscript,
        $.pure_function,
        // $.arrow_function,
        $.list,
        $.association,
        $.span,
        $.pattern,
        $.pattern_test,
        $.condition,
        $.parenthesized,
        $._special
      ),

    _special: ($) =>
      choice(
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.goto_statement,
        $.label_statement,
        $.do_block,
        $.while_block,
        $.for_block,
        $.if_block,
        $.switch_block,
        $.which_block,
        $.module_block
      ),

    scoped_symbol: ($) =>
      precedented(
        precedences.symbol,
        seq(
          field("context", $.context),
          field("name", alias(token.immediate(ident), $.identifier))
        )
      ),

    identifier: (_) => {
      return token(ident);
    },
  },
});

function precedented(obj, expr) {
  return obj.associativity(obj.precedence, expr);
}
